# rrt

./: .gitignore  Cargo.toml
resources/test/: 1.100x100.ppm  1.300x200.ppm  1.ppm
src/: main.rs  ppm.rs  ray.rs  renderer.rs  scene.rs  testing.rs  types.rs
src/objects/: sphere.rs
