[package]
name = "rrt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"
nalgebra = "0.32.3"
num_cpus = "1.16"
num-traits = "0.2"
rand = "0.8"